...

    Column(
        modifier = Modifier
            .fillMaxWidth()
            .verticalScroll(rememberScrollState())
            .padding(5.dp, 10.dp)
            .testTag("admin-bounty-page-loaded")
    ) {
        Row(modifier = Modifier.padding(10.dp, 0.dp)) {
            Text(
                text = bounty.name,
                fontSize = 28.sp
            )

            Spacer(modifier = Modifier.weight(1f))

            IconButton(onClick = { showPopup = true },
                modifier = Modifier
                    .testTag("edit-btn")
                    .align(Alignment.CenterVertically)) {
                Icon(Icons.Default.Edit,
                    contentDescription = "edit")
            }

            Spacer(modifier = Modifier.width(5.dp))
...
