...
                Spacer(modifier = Modifier.height(20.dp))

                TextField(
                    value = name,
                    onValueChange = { name = it },
                    placeholder = { Text(stringResource(R.string.renaming_bounty_placeholder)) },
                    modifier = Modifier.testTag("rename-field")
                )
            }
        },
        buttons = {
            Row(modifier = Modifier.fillMaxWidth(), horizontalArrangement = Arrangement.Center) {
                Button({ onDismiss(name.takeIf { name != bounty.name }) }) {
...
