...

    TextField(value = location?.toString() ?: stringResource(R.string.location_picker_placeholder),
        onValueChange = {},
        readOnly = true,
        enabled = false,
        modifier = Modifier
            .testTag("location-picker-field")
            .clickable { showLocationDialog = true })

    if (showLocationDialog) {
        LocationDialog(location = location, setLocation = setLocation) {
            showLocationDialog = false
        }
...
